@@ -2,6 +2,10 @@ plugins {
     kotlin("jvm") version "2.4.10"
 }
 
+val junitVersion = "6.0.0"
+val kotlinVersion = "1.11.0"
+val mockkVersion = "1.14.11"
+
 group = "org.sony"
 version = "1.0-SNAPSHOT"
 
@@ -10,9 +14,12 @@ repositories {
 }
 
 dependencies {
-    testImplementation(kotlin("test"))
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinVersion")
     implementation("com.squareup.retrofit2:retrofit:3.0.0")
+    testImplementation("org.junit.jupiter:junit-jupiter:$junitVersion")
+    testImplementation(kotlin("test"))
+    testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:$kotlinVersion")
+    testImplementation("io.mockk:mockk:$mockkVersion")
 }
 
 kotlin {
@@ -21,4 +28,5 @@ kotlin {
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading", "-Xshare:off")
 }
